# etl-airbnb

./: .gitignore  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
search/: search_index.json
site/: 404.html  index.html
src/: main.py
src/etl/: extract.py  load.py  transform.py
tests/: test_pipe.py
