[tool.poetry]
name = "etl-airbnb"
version = "0.1.0"
description = ""
authors = ["Francisco Santos <francismelo.jr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
bs4 = "^0.0.1"
selenium = "^4.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
