[tool.poetry]
name = "etl-airbnb"
version = "0.1.0"
description = ""
authors = ["Francisco Santos <francismelo.jr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
bs4 = "^0.0.1"
selenium = "^4.14.0"
requests = "^2.31.0"
pytest = "^7.4.2"
fsspec = "^2023.10.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.3"
pygments = "^2.16.1"
mkdocs-material = "^9.4.6"
pymdown-extensions = "^10.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
